add(global):ajout du fichier swagger.js et de la mise en place du swagger dans la route formation.route.js

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.1",
     "nodemon": "^3.1.11",
     "pg": "^8.16.3",
+    "swagger": "^0.7.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
