--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "category": "node src/sql/categories_sql.js",
     "role": "node src/sql/roles_sql.js",
     "start": "cross-env NODE_ENV=production node src/server.js",
-    "dev": "cross-env NODE_ENV=development nodemon src/server.js",
-    "role": "node src/sql/roles_sql.js"
+    "dev": "cross-env NODE_ENV=development nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
