- ajout variable .env.exemple

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ DB_PORT=5432
 DB_NAME=api_formations
 DB_USER=dbuser
 DB_PASSWORD=mdp
+RATE_GLOBAL_WINDOW_MS=60000
+RATE_GLOBAL_MAX=100
+JWT_SECRET=ma_clef_secrete_pour_jwt
+JWT_EXPIRES_IN=3600
